--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "safer-buffer": "^2.1.2",
     "send": "^1.2.0",
     "setprototypeof": "^1.2.0",
+    "socket.io": "^4.8.1",
     "undici-types": "^7.8.0",
     "unpipe": "^1.0.0",
     "wrappy": "^1.0.2"
